--- a/5.Jupyter/300151558/RAPPORT.ipynb
+++ b/5.Jupyter/300151558/RAPPORT.ipynb
@@ -7,6 +7,45 @@
    "source": [
     "$g(n)= 2n$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "30a5a2dd-244b-4a12-ab6c-7c1a5a2d5244",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 → 2\n",
+      "2 → 4\n",
+      "3 → 6\n",
+      "4 → 8\n",
+      "5 → 10\n",
+      "6 → 12\n",
+      "7 → 14\n",
+      "8 → 16\n",
+      "9 → 18\n",
+      "10 → 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "def g(n):\n",
+    "    return 2*n\n",
+    "\n",
+    "for i in range(1, 11):\n",
+    "    print(i, \"→\", g(i))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05ac58d8-6f6e-4990-9aa6-7dbb46740639",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -25,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.19"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
