--- a/6.Variables/300150468/RAPPORT.ipynb
+++ b/6.Variables/300150468/RAPPORT.ipynb
@@ -32,10 +32,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e225ac89-b156-44b4-b62f-fbe161a3d9c5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- f(10) ---\n",
+      "binaire      -> 0b1010\n",
+      "hexadécimal  -> 0xa\n",
+      "int          -> 10\n",
+      "float        -> 10.0\n",
+      "str          -> 10\n",
+      "\n",
+      "--- f(2.718) ---\n",
+      "float        -> 2.718\n",
+      "int          -> 2\n",
+      "str          -> 2.718\n",
+      "\n",
+      "--- f(hello) ---\n",
+      "str          -> hello\n",
+      "list         -> ['h', 'e', 'l', 'l', 'o']\n",
+      "tuple        -> ('h', 'e', 'l', 'l', 'o')\n",
+      "\n",
+      "--- f([7, 8, 9]) ---\n",
+      "list         -> [7, 8, 9]\n",
+      "tuple        -> (7, 8, 9)\n",
+      "array        -> array('i', [7, 8, 9])\n",
+      "str          -> [7, 8, 9]\n",
+      "\n",
+      "--- f((10, 20, 30)) ---\n",
+      "tuple        -> (10, 20, 30)\n",
+      "list         -> [10, 20, 30]\n",
+      "array        -> array('i', [10, 20, 30])\n",
+      "str          -> (10, 20, 30)\n",
+      "\n",
+      "--- f({'x': 1, 'y': 2}) ---\n",
+      "dict         -> {'x': 1, 'y': 2}\n",
+      "list_clés    -> ['x', 'y']\n",
+      "list_valeurs -> [1, 2]\n",
+      "str          -> {'x': 1, 'y': 2}\n"
+     ]
+    }
+   ],
    "source": [
     "from embellisseur import f\n",
     "\n",
@@ -76,10 +118,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "417ee4f2-2416-4860-b810-af87ba5f5d8f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La moyenne algébrique est : 6.1\n",
+      "La moyenne géométrique est : 5.3345372167932\n"
+     ]
+    }
+   ],
    "source": [
     "from moyenne import algebrique, geometrique\n",
     "\n",
@@ -109,10 +160,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3e384af1-60bc-4966-963a-9bf89f813256",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ensemble des couples filtrés : {('C', 4), ('A', 4), ('C', 6), ('B', 6), ('C', 2), ('A', 6), ('B', 2), ('A', 2), ('B', 4)}\n",
+      "Moyenne algébrique des x filtrés : 4.0\n"
+     ]
+    }
+   ],
    "source": [
     "K = ['A', 'B', 'C']\n",
     "X = [1, 2, 3, 4, 5, 6]\n",
@@ -133,11 +193,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "41863f00-30d7-4796-8461-d9d5a2f5ae0e",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## 🧠 Conclusion\n",
     "\n",
@@ -146,9 +204,25 @@
     "- Des fonctions mathématiques (`algebrique`, `geometrique`) peuvent être réutilisées.\n",
     "- Les **ensembles** et **comprehensions** facilitent les filtres et combinaisons de données.\n",
     "\n",
-    "> 🧩 Python est un langage à typage dynamique, où les fonctions peuvent être générales,\n",
+    ">  Python est un langage à typage dynamique, où les fonctions peuvent être générales,\n",
     "> et les structures (listes, tuples, sets, dictionnaires) très expressives."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba7fc5ea-8402-42a2-b514-ac00057cc00c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7943341-ebda-4613-a230-3eca423f1f95",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -167,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
