--- a/7.Algorithmes/300152315/RAPPORT.ipynb
+++ b/7.Algorithmes/300152315/RAPPORT.ipynb
@@ -2,18 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7304e237-4f5b-482d-bf0a-60942183d83a",
    "metadata": {},
    "source": [
-    "# 🧮 Étude : Influence des boucles et de la récursion sur les algorithmes\n\n",
-    "Ce rapport démontre comment les **algorithmes** sont influencés par la **programmation itérative** (avec `for`, `while`) et la **programmation récursive** en **Python**.\n"
+    "# 🧮 Étude : Influence des boucles et de la récursion sur les algorithmes\n",
+    "\n",
+    "|     |                     |\n",
+    "| --- | ------------------- |\n",
+    "| Nom | noureddine boussekine |\n",
+    "| 🆔  | 300152315          |\n",
+    "\n",
+    "Ce rapport démontre comment les **algorithmes** sont influencés par la **programmation itérative** (avec `for`, `while`) et la **programmation récursive** en **Python**."
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "7f19c45d",
    "metadata": {},
    "source": [
-    "## 1️⃣ Factorielle\n\n",
-    "### 🔹 Formule mathématique\n\n",
+    "## 1️⃣ Factorielle\n",
+    "\n",
+    "### 🔹 Formule mathématique\n",
+    "\n",
     "$\n",
     "n! = \\begin{cases}\n",
     "   1, & \\text{si } n = 0 \\\\\n",
@@ -24,9 +34,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "1cfed3ed",
    "metadata": {},
-   "execution_count": null,
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def factorielle_iterative(n):\n",
     "    resultat = 1\n",
@@ -40,9 +62,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "ef67b53c",
    "metadata": {},
-   "execution_count": null,
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def factorielle_recursive(n):\n",
     "    if n == 0:\n",
@@ -55,8 +89,9 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "530aa30e",
    "metadata": {},
-   "execution_count": null,
    "outputs": [],
    "source": [
     "from functools import reduce\n",
@@ -70,6 +105,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4a9ce067",
    "metadata": {},
    "source": [
     "### 🧩 Synthèse (Section Factorielle)\n",
@@ -80,14 +116,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b4c55ec5",
    "metadata": {},
    "source": [
-    "## 2️⃣ Somme des n premiers entiers\n\n",
-    "### 🔹 Formule mathématique\n\n",
+    "## 2️⃣ Somme des n premiers entiers\n",
+    "\n",
+    "### 🔹 Formule mathématique\n",
+    "\n",
     "$\n",
     "S(n) = 1 + 2 + 3 + \\dots + n = \\frac{n(n + 1)}{2}\n",
-    "$\n\n",
-    "### 🔹 Forme récursive\n\n",
+    "$\n",
+    "\n",
+    "### 🔹 Forme récursive\n",
+    "\n",
     "$\n",
     "S(n) =\n",
     "\\begin{cases}\n",
@@ -99,9 +140,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "d8d3a49d",
    "metadata": {},
-   "execution_count": null,
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def somme_while(n):\n",
     "    i = 1\n",
@@ -116,9 +169,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "20754bae",
    "metadata": {},
-   "execution_count": null,
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def somme_recursive(n):\n",
     "    if n == 0:\n",
@@ -130,10 +195,13 @@
   },
   {
    "cell_type": "markdown",
+   "id": "332f3bf7",
    "metadata": {},
    "source": [
-    "## 3️⃣ Suite de Fibonacci\n\n",
-    "### 🔹 Formule mathématique\n\n",
+    "## 3️⃣ Suite de Fibonacci\n",
+    "\n",
+    "### 🔹 Formule mathématique\n",
+    "\n",
     "$\n",
     "F(n) =\n",
     "\\begin{cases}\n",
@@ -146,9 +214,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "243f6186",
    "metadata": {},
-   "execution_count": null,
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def fib_iter(n):\n",
     "    a, b = 0, 1\n",
@@ -161,9 +241,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "3babc1f9",
    "metadata": {},
-   "execution_count": null,
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def fib_rec(n):\n",
     "    if n <= 1:\n",
@@ -175,17 +267,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e792cba2",
    "metadata": {},
    "source": [
-    "## 📘 4️⃣ Synthèse comparative\n\n",
+    "## 📘 4️⃣ Synthèse comparative\n",
+    "\n",
     "| Algorithme | Formule mathématique | Base | Récurrence | Complexité temporelle |\n",
     "|-------------|----------------------|-------|-------------|------------------------|\n",
     "| Factorielle | \\( n! = n \\times (n-1)! \\) | \\( 0! = 1 \\) | Simple | O(n) |\n",
     "| Somme | \\( S(n) = n + S(n-1) \\) | \\( S(0) = 0 \\) | Simple | O(n) |\n",
     "| Fibonacci | \\( F(n) = F(n-1) + F(n-2) \\) | \\( F(0)=0, F(1)=1 \\) | Double | O(2^n) (récursif) / O(n) (itératif) |\n",
     "\n",
-    "---\n\n",
-    "### 🧠 Conclusion\n\n",
+    "---\n",
+    "\n",
+    "### 🧠 Conclusion\n",
+    "\n",
     "- Les **boucles (`for`, `while`)** permettent une **programmation itérative**, efficace en mémoire.  \n",
     "- La **récursion** traduit directement la **définition mathématique** d’un algorithme, mais consomme plus de mémoire.  \n",
     "- Les deux approches atteignent le même résultat, mais influencent différemment la **structure, la performance et la lisibilité**.\n"
@@ -193,16 +289,24 @@
   }
  ],
  "metadata": {
+  "created": "2025-11-12T23:07:35.643487Z",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.x"
-  },
-  "created": "2025-11-12T23:07:35.643487Z"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.12"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 5
