--- a/6.Variables/300155606/RAPPORT.ipynb
+++ b/6.Variables/300155606/RAPPORT.ipynb
@@ -1,54 +1,102 @@
+
 {
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "24c7d233-2d5e-4ddc-95a5-e585bd10548d",
+   "id": "2ffddb62",
    "metadata": {},
    "source": [
+    "\n",
     "# 🪐 RAPPORT : Analyse de Code Python (Variables, Moyennes, Ensembles)\n",
     "\n",
     "|     |                     |\n",
     "| --- | ------------------- |\n",
-    "| Nom | djelloul msili |\n",
-    "| 🆔  | 300155606          |\n",
-    "\n",
+    "| **Nom** | *djelloul msili* |\n",
+    "| **🆔**  | *300155606* |\n",
     "\n",
     "Ce notebook présente trois sections :\n",
     "1. Le module `embellisseur` et la fonction `f`\n",
-    "2. Le module `moyenne` (moyenne algébrique et géométrique)\n",
-    "3. Les ensembles (`set`) et la compréhension"
+    "2. Le module `moyenne` (moyenne **algébrique** et **géométrique**)\n",
+    "3. Les **ensembles** (`set`) et les **comprehensions**\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b79f39fa-13e1-4ab2-9395-f4edc837bcc7",
+   "id": "b5a1553e",
    "metadata": {},
    "source": [
-    "#### 1️⃣ Import du module `embellisseur`\n",
     "\n",
-    "Cette section montre comment la fonction `f` traite différents types de variables.\n",
-    "Elle illustre le **polymorphisme** de Python (une même fonction peut gérer plusieurs types)."
+    "### 🔧 (Optionnel) Préparer les modules locaux\n",
+    "Cette cellule **crée** des versions simples de `embellisseur.py` et `moyenne.py` **uniquement si** les fichiers n'existent pas déjà dans le dossier courant.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5092e276",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## 1️⃣ Import du module `embellisseur`\n",
+    "\n",
+    "Cette section montre comment la fonction `f` traite différents **types** de variables.  \n",
+    "Elle illustre le **polymorphisme** : une même fonction peut gérer plusieurs types.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "46e9aec0-9bdb-4d22-8701-02849521b903",
+   "execution_count": 3,
+   "id": "07f2ae82",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'embellisseur'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m----------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01membellisseur\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m f\n\u001b[32m      3\u001b[39m exemples = [\n\u001b[32m      4\u001b[39m     \u001b[32m10\u001b[39m,\n\u001b[32m      5\u001b[39m     \u001b[32m2.718\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m      9\u001b[39m     {\u001b[33m\"\u001b[39m\u001b[33mx\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m1\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33my\u001b[39m\u001b[33m\"\u001b[39m: \u001b[32m2\u001b[39m}\n\u001b[32m     10\u001b[39m ]\n\u001b[32m     12\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m e \u001b[38;5;129;01min\u001b[39;00m exemples:\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'embellisseur'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- f(10) ---\n",
+      "type               -> int\n",
+      "repr               -> 10\n",
+      "is_numeric         -> True\n",
+      "double             -> 20\n",
+      "\n",
+      "--- f(2.718) ---\n",
+      "type               -> float\n",
+      "repr               -> 2.718\n",
+      "is_numeric         -> True\n",
+      "double             -> 5.436\n",
+      "\n",
+      "--- f('hello') ---\n",
+      "type               -> str\n",
+      "repr               -> 'hello'\n",
+      "is_numeric         -> False\n",
+      "length             -> 5\n",
+      "upper              -> HELLO\n",
+      "\n",
+      "--- f([7, 8, 9]) ---\n",
+      "type               -> list\n",
+      "repr               -> [7, 8, 9]\n",
+      "is_numeric         -> False\n",
+      "length             -> 3\n",
+      "sum_if_numeric     -> 24\n",
+      "\n",
+      "--- f((10, 20, 30)) ---\n",
+      "type               -> tuple\n",
+      "repr               -> (10, 20, 30)\n",
+      "is_numeric         -> False\n",
+      "length             -> 3\n",
+      "sum_if_numeric     -> 60\n",
+      "\n",
+      "--- f({'x': 1, 'y': 2}) ---\n",
+      "type               -> dict\n",
+      "repr               -> {'x': 1, 'y': 2}\n",
+      "is_numeric         -> False\n",
+      "keys               -> ['x', 'y']\n",
+      "values             -> [1, 2]\n"
      ]
     }
    ],
    "source": [
+    "\n",
     "from embellisseur import f\n",
     "\n",
     "exemples = [\n",
@@ -61,77 +109,91 @@
     "]\n",
     "\n",
     "for e in exemples:\n",
-    "    print(f\"\\n--- f({e}) ---\")\n",
+    "    print(f\"\\n--- f({e!r}) ---\")\n",
     "    resultat = f(e)\n",
     "    for k, v in resultat.items():\n",
-    "        print(f\"{k:12} -> {v}\")"
+    "        print(f\"{k:18} -> {v}\")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "db448ab7-0ee5-4dde-804b-e3a1bc34b748",
+   "id": "6e344ef8",
    "metadata": {},
    "source": [
+    "\n",
     "## 2️⃣ Moyenne algébrique et géométrique\n",
     "\n",
     "Le module `moyenne` contient deux fonctions :\n",
     "\n",
     "- `algebrique(L)` : calcule la moyenne arithmétique  \n",
-    "  $\n",
-    "  \\bar{x} = \\frac{\\sum x_i}{n}\n",
-    "  $\n",
-    "- `geometrique(L)` : calcule la moyenne géométrique  \n",
-    "  $\n",
-    "  G = \\sqrt[n]{\\prod x_i}\n",
-    "  $"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "49a6f1be-a128-4fcf-ae87-d13e366a6895",
-   "metadata": {},
-   "source": [
-    "## 3️⃣ Ensembles (set) et compréhension\n",
+    "  $$\\bar{x}=\\frac{\\sum_{i=1}^{n} x_i}{n}$$\n",
     "\n",
-    "${\\displaystyle \\{(k,x)\\ \\|\\ k\\in K\\wedge x\\in X\\wedge P(x)\\}}$\n",
-    "\n",
-    "On construit un ensemble `S` de couples `(k, x)` où :\n",
-    "- `k` provient de la liste `K = ['A', 'B', 'C']`\n",
-    "- `x` provient de la liste `X = [1, 2, 3, 4, 5, 6]`\n",
-    "- et `x` satisfait une condition `P(x)` (ici, être pair).\n",
-    "\n",
-    "Cela illustre :\n",
-    "- les **comprehensions** (`{... for ... if ...}`)\n",
-    "- l'utilisation des **ensembles (`set`)**\n",
-    "- la **réutilisation de fonction** (`algebrique`)"
+    "- `geometrique(L)` : calcule la moyenne géométrique (pour $x_i>0$)  \n",
+    "  $$G=\\sqrt[n]{\\prod_{i=1}^{n} x_i}$$\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "6563971f-2f69-4420-93bb-ee3395e0be2a",
+   "execution_count": 8,
+   "id": "0cd13efd",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ensemble des couples filtrés : {('B', 4), ('A', 6), ('C', 4), ('B', 6), ('A', 2), ('C', 6), ('B', 2), ('A', 4), ('C', 2)}\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'algebrique' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m----------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                      Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m     10\u001b[39m x_values = [x \u001b[38;5;28;01mfor\u001b[39;00m (_, x) \u001b[38;5;129;01min\u001b[39;00m S]\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m x_values:\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m     moyenne = \u001b[43malgebrique\u001b[49m(x_values)\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m     14\u001b[39m     moyenne = \u001b[32m0\u001b[39m\n",
-      "\u001b[31mNameError\u001b[39m: name 'algebrique' is not defined"
+      "Données : [2, 4.5, 6, 8, 10]\n",
+      "Moyenne algébrique : 6.1\n",
+      "Moyenne géométrique : 5.3345372167932\n"
      ]
     }
    ],
    "source": [
+    "\n",
+    "from moyenne import algebrique, geometrique\n",
+    "\n",
+    "donnees = [2, 4.5, 6, 8, 10]\n",
+    "print(\"Données :\", donnees)\n",
+    "print(\"Moyenne algébrique :\", algebrique(donnees))\n",
+    "print(\"Moyenne géométrique :\", geometrique(donnees))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae00e9b5",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## 3️⃣ Ensembles (set) et compréhension\n",
+    "\n",
+    "On construit un ensemble `S` de couples `(k, x)` où :\n",
+    "- `k` provient de la liste `K = ['A', 'B', 'C']`\n",
+    "- `x` provient de la liste `X = [1, 2, 3, 4, 5, 6]`\n",
+    "- et `x` satisfait une condition `P(x)` (*ici, être pair*).\n",
+    "\n",
+    "Cela illustre :\n",
+    "- les **comprehensions** (`{... for ... if ...}`),\n",
+    "- l'utilisation des **ensembles (`set`)**,\n",
+    "- la **réutilisation** de `algebrique`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e540eefa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ensemble des couples filtrés : {('B', 2), ('A', 6), ('C', 4), ('B', 4), ('A', 2), ('C', 6), ('C', 2), ('B', 6), ('A', 4)}\n",
+      "Moyenne algébrique des x filtrés : 4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
     "K = ['A', 'B', 'C']\n",
     "X = [1, 2, 3, 4, 5, 6]\n",
     "\n",
@@ -142,45 +204,9 @@
     "print(\"Ensemble des couples filtrés :\", S)\n",
     "\n",
     "x_values = [x for (_, x) in S]\n",
-    "if x_values:\n",
-    "    moyenne = algebrique(x_values)\n",
-    "else:\n",
-    "    moyenne = 0\n",
-    "\n",
-    "print(\"Moyenne algébrique des x filtrés :\", moyenne)"
+    "moyenne_pairs = algebrique(x_values) if x_values else 0\n",
+    "print(\"Moyenne algébrique des x filtrés :\", moyenne_pairs)\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5decaaad-6e6c-4cbc-b1a7-f3953aa02e15",
-   "metadata": {},
-   "source": [
-    "## 🧠 Conclusion\n",
-    "\n",
-    "Ce rapport montre comment :\n",
-    "- Une même fonction (`f`) peut traiter plusieurs types de données.\n",
-    "- Des fonctions mathématiques (`algebrique`, `geometrique`) peuvent être réutilisées.\n",
-    "- Les **ensembles** et **comprehensions** facilitent les filtres et combinaisons de données.\n",
-    "\n",
-    "> 🧩 Python est un langage à typage dynamique, où les fonctions peuvent être générales,\n",
-    "> et les structures (listes, tuples, sets, dictionnaires) très expressives."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9616a2f9-ad54-46f7-97c0-57406361ecd3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abae7ccf-5435-4b88-819f-bc16ecf77f6b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -199,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
